[package]
name = "ai_wargame_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
