[package]
name = "ai_wargame_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.5.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.4", features = ["normalize-path", "fs", "trace"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
nanoid = "0.4.0"

[features]
default = ["internal"]
internal = []
